added all csv and sqlite3 files to gitignroe

--- a/templates/index_mobile.html
+++ b/templates/index_mobile.html
@@ -28,7 +28,7 @@
             });
         }
   
-        setInterval(updateCount, 5000);
+        setInterval(updateCount, 500);
   
         function incrementCount() {
           fetch("/add", { method: "POST" })
@@ -63,7 +63,7 @@
  <p id="count-text"> COUNT: </p> <span id="count">0</span>
  
     <div id="buttons">
-        <button id="export" onclick="export_to_csv()"><span id="download-icon" class="material-symbols-outlined">download</span></button>
+        <button id="export" onclick="export_to_csv()"><span id="download-icon" class="material-symbols-outlined">dwnld</span></button>
         <button id="sub" onclick="decrementCount()">-</button>
       <button id="add" onclick="incrementCount()">+</button>
     </div>
